gitops/apps/apple-concept/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apple-concept
  namespace: apple-concept
spec:
  ingressClassName: traefik
  rules:
    - host: apple-concept.ismola.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apple-concept
                port:
                  number: 80
